syntax = "proto3";

package zero;

import "acs0.proto";
import "acs1.proto";

option csharp_namespace = "AElf.Contracts.Genesis";

service BasicContractZero {
    option (aelf.csharp_state) = "AElf.Contracts.Genesis.BasicContractZeroState";
    option (aelf.base) = "acs0.proto";
    option (aelf.base) = "acs1.proto";

    rpc ChangeContractDeploymentController (acs1.AuthorityInfo) returns (google.protobuf.Empty) {
    }
    rpc ChangeCodeCheckController (acs1.AuthorityInfo) returns (google.protobuf.Empty) {
    }
    rpc GetContractDeploymentController (google.protobuf.Empty) returns (acs1.AuthorityInfo) {
        option (aelf.is_view) = true;
    }
    rpc GetCodeCheckController(google.protobuf.Empty) returns (acs1.AuthorityInfo){
        option (aelf.is_view) = true;
    }
}

message ContractProposingInput{
    aelf.Address proposer = 1;
    ContractProposingInputStatus status = 2;   
}

enum ContractProposingInputStatus {
    PROPOSED = 0;
    APPROVED = 1;
    PRE_CODE_CHECKED = 2;
    CODE_CHECKED = 3;
}